--- a/Experimento2.html
+++ b/Experimento2.html
@@ -25,7 +25,7 @@
 
 				<div class="collapse navbar-collapse" id="uno">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a href="#" class="nav-link">Juegos</a></li>
+						<li class="nav-item"><a href="file:///home/sebastian/Documents/Programas/Bootstrap/Juegos.html" class="nav-link">Juegos</a></li>
 						<li class="nav-item"><a href="#" class="nav-link">Torneos</a></li>
 						<li class="nav-item"><a href="#" class="nav-link">Gameplay</a></li>
 						<li class="nav-item dropdown">
